docs/0.5.187/_sidebar.md
<center>
  Select version:
  <select id="version" onchange="window.location.href.includes('github.io')? window.location.href = `/kwirth/#/${document.getElementById('version').value}/index` : window.location.href.includes('kwirthmagnify.dev') || window.location.href.includes('localhost')? window.location.href = `/documentation/#/${document.getElementById('version').value}/index` : window.location.href = `/#/${document.getElementById('version').value}/index`">
    <option value="0.5.187" selected>0.5.187</option>
    <option value="0.5.40">0.5.40</option>
    <option value="0.5.21">0.5.21</option>
    <option value="0.4.127">0.4.127</option>
    <option value="0.4.63">0.4.63</option>
    <option value="0.4.20">0.4.20</option>
    <option value="0.3.160">0.3.160</option>
    <option value="0.2.8">0.2.8</option>
  </select>
</center>

* [Home](/0.5.187/index)
* [User & Admin Guide](/0.5.187/guide/index)
  * [Using Kwirth](/0.5.187/guide/user/01-introduction)
    * [1. Introduction](/0.5.187/guide/user/01-introduction)
    * [2. Accessing Kwirth](/0.5.187/guide/user/02-access)
    * [3. The Kwirth UI](/0.5.187/guide/user/03-ui-tour)
    * [4. Selecting what to observe](/0.5.187/guide/user/04-selecting-resources)
    * [5. Working with channels](/0.5.187/guide/user/05-channels)
    * [6. Workspaces](/0.5.187/guide/user/06-workspaces)
    * [7. Everyday tasks](/0.5.187/guide/user/07-everyday-tasks)
  * [Administration](/0.5.187/guide/admin/01-deployment)
    * [1. Deployment](/0.5.187/guide/admin/01-deployment)
    * [2. Initial configuration](/0.5.187/guide/admin/02-initial-config)
    * [3. User management](/0.5.187/guide/admin/03-user-management)
    * [4. Security & permissions](/0.5.187/guide/admin/04-security-and-permissions)
    * [5. API management](/0.5.187/guide/admin/05-api-management)
    * [6. Cluster management](/0.5.187/guide/admin/06-cluster-management)
    * [7. Identity Provider integration](/0.5.187/guide/admin/07-idp-integration)
    * [8. Extending Kwirth](/0.5.187/guide/admin/08-extending-kwirth)
  * [Extension manuals](/0.5.187/guide/extensions/index)
    * [Plugins (channels)](/0.5.187/guide/extensions/plugins/index)
      * [Log](/0.5.187/guide/extensions/plugins/log)
      * [Metrics](/0.5.187/guide/extensions/plugins/metrics)
      * [Alert](/0.5.187/guide/extensions/plugins/alert)
      * [Ops](/0.5.187/guide/extensions/plugins/ops)
      * [mIRC](/0.5.187/guide/extensions/plugins/mirc)
      * [Magnify](/0.5.187/guide/extensions/plugins/magnify)
      * [Trivy](/0.5.187/guide/extensions/plugins/trivy)
      * [Fileman](/0.5.187/guide/extensions/plugins/fileman)
      * [Topology](/0.5.187/guide/extensions/plugins/topology)
      * [Censor](/0.5.187/guide/extensions/plugins/censor)
      * [Pinocchio](/0.5.187/guide/extensions/plugins/pinocchio)
      * [News](/0.5.187/guide/extensions/plugins/news)
      * [Echo](/0.5.187/guide/extensions/plugins/echo)
    * [Providers](/0.5.187/guide/extensions/providers/index)
      * [Tick](/0.5.187/guide/extensions/providers/tick)
      * [Validating](/0.5.187/guide/extensions/providers/validating)
      * [Kafka](/0.5.187/guide/extensions/providers/kafka)
      * [OpenTelemetry](/0.5.187/guide/extensions/providers/otel)
      * [Syslog](/0.5.187/guide/extensions/providers/syslog)
      * [Trivy](/0.5.187/guide/extensions/providers/trivy)
      * [Sample](/0.5.187/guide/extensions/providers/sample)
    * [Senders](/0.5.187/guide/extensions/senders/index)
      * [console](/0.5.187/guide/extensions/senders/console)
      * [file](/0.5.187/guide/extensions/senders/file)
      * [email-smtp](/0.5.187/guide/extensions/senders/email-smtp)
      * [email-resend](/0.5.187/guide/extensions/senders/email-resend)
      * [teams](/0.5.187/guide/extensions/senders/teams)
      * [tee](/0.5.187/guide/extensions/senders/tee)
      * [regex](/0.5.187/guide/extensions/senders/regex)
      * [timed](/0.5.187/guide/extensions/senders/timed)
      * [ratelimit](/0.5.187/guide/extensions/senders/ratelimit)
      * [composite](/0.5.187/guide/extensions/senders/composite)
    * [Themes](/0.5.187/guide/extensions/themes/index)
      * [Avicii](/0.5.187/guide/extensions/themes/avicii)
      * [SFY](/0.5.187/guide/extensions/themes/sfy)
      * [Plexus](/0.5.187/guide/extensions/themes/plexus)
      * [Post-Punk](/0.5.187/guide/extensions/themes/post-punk)
      * [Matrix](/0.5.187/guide/extensions/themes/matrix)
      * [Depeche Mode](/0.5.187/guide/extensions/themes/depeche-mode)
    * [Identity providers](/0.5.187/guide/extensions/idps/index)
      * [Google](/0.5.187/guide/extensions/idps/google)
      * [GitLab Cloud](/0.5.187/guide/extensions/idps/gitlab-cloud)
      * [GitLab Self-Managed](/0.5.187/guide/extensions/idps/gitlab-onprem)
      * [GitHub Cloud](/0.5.187/guide/extensions/idps/github-cloud)
      * [GitHub Enterprise](/0.5.187/guide/extensions/idps/github-onprem)
    * [Homepages](/0.5.187/guide/extensions/homepages/index)
      * [Clusterized](/0.5.187/guide/extensions/homepages/clusterized)
      * [Avicii](/0.5.187/guide/extensions/homepages/avicii)
      * [Matrix](/0.5.187/guide/extensions/homepages/matrix)
      * [Depeche Mode](/0.5.187/guide/extensions/homepages/depeche-mode)
    * [Login extensions](/0.5.187/guide/extensions/logins/index)
* [Installation](/0.5.187/installation)
* [How it works](/0.5.187/how)
* [Data streaming](/0.5.187/datastreaming)
* [Channel Architecture](/0.5.187/channelarch)
* [Plugins](/0.5.187/plugins/index)
  * [Managing plugins](/0.5.187/plugins/managing)
  * [Plugin reference](/0.5.187/plugins/reference/index)
    * [Log](/0.5.187/plugins/reference/log)
    * [Alert](/0.5.187/plugins/reference/alert)
    * [Censor](/0.5.187/plugins/reference/censor)
    * [Ops](/0.5.187/plugins/reference/ops)
    * [Fileman](/0.5.187/plugins/reference/fileman)
    * [Trivy](/0.5.187/plugins/reference/trivy)
    * [Pinocchio](/0.5.187/plugins/reference/pinocchio)
    * [Topology](/0.5.187/plugins/reference/topology)
    * [Echo](/0.5.187/plugins/reference/echo)
    * [News](/0.5.187/plugins/reference/news)
  * [Developing plugins](/0.5.187/plugins/developing)
* [Providers](/0.5.187/providers/index)
  * [Developing providers](/0.5.187/providers/developing)
  * [Provider reference](/0.5.187/providers/reference/index)
    * [Tick](/0.5.187/providers/reference/tick)
    * [Events](/0.5.187/providers/reference/events)
    * [Business](/0.5.187/providers/reference/business)
    * [Validating](/0.5.187/providers/reference/validating)
    * [Metrics](/0.5.187/providers/reference/metrics)
    * [Kafka](/0.5.187/providers/reference/kafka)
    * [OpenTelemetry](/0.5.187/providers/reference/otel)
    * [Sample](/0.5.187/providers/reference/sample)
* [Senders](/0.5.187/senders/index)
  * [Managing senders](/0.5.187/senders/managing)
  * [Developing senders](/0.5.187/senders/developing)
  * [Sender reference](/0.5.187/senders/reference/index)
    * [console](/0.5.187/senders/reference/console)
    * [file](/0.5.187/senders/reference/file)
    * [email-resend](/0.5.187/senders/reference/email-resend)
    * [email-smtp](/0.5.187/senders/reference/email-smtp)
    * [teams](/0.5.187/senders/reference/teams)
    * [tee](/0.5.187/senders/reference/tee)
    * [regex](/0.5.187/senders/reference/regex)
    * [composite](/0.5.187/senders/reference/composite)
    * [timed](/0.5.187/senders/reference/timed)
* [Channels](/0.5.187/channels/index)
  * [Log](/0.5.187/channels/log)
  * [Metrics](/0.5.187/channels/metrics)
  * [Alert](/0.5.187/channels/alert)
  * [Trivy](/0.5.187/channels/trivy)
  * [Ops](/0.5.187/channels/ops)
  * [Echo](/0.5.187/channels/echo)
  * [Fileman](/0.5.187/channels/fileman)
  * [Magnify](/0.5.187/channels/magnify)
  * [Pinocchio](/0.5.187/channels/pinocchio)
  * [Topology](/0.5.187/channels/topology)
  * [Censor](/0.5.187/channels/censor)
  * [News](/0.5.187/channels/news)
* [Security](/0.5.187/security)
* [Common tasks](/0.5.187/commontasks)
* [User management](/0.5.187/usermanagement)
* [IdP integration](/0.5.187/idp/index)
  * [Google / Gmail](/0.5.187/idp/google)
  * [GitLab](/0.5.187/idp/gitlab)
  * [GitHub](/0.5.187/idp/github)
  * [Security notes](/0.5.187/idp/security)
* [Cluster management](/0.5.187/clustermanagement)
* [API Management](/0.5.187/apimanagement/index)
  * [API Keys](/0.5.187/apimanagement/api-keys)
  * [Access Keys](/0.5.187/apimanagement/access-keys)
  * [Multi-cluster](/0.5.187/apimanagement/multi-cluster)
  * [Key types](/0.5.187/apimanagement/key-types)
* [Use cases](/0.5.187/usecases)
* [Developing](/0.5.187/developing/index)
  * [Back channel](/0.5.187/developing/back)
  * [Front channel](/0.5.187/developing/front)
  * [Build Kwirth](/0.5.187/build)
    * [Linux Build Setup](/0.5.187/linux-build-setup)
* [Change log](/0.5.187/changelog)
* [Roadmap](/0.5.187/roadmap)
* [About](/0.5.187/about)
