docs/0.5.287/_sidebar.md
<center>
  Select version:
  <select id="version" onchange="window.location.href.includes('github.io')? window.location.href = `/kwirth/#/${document.getElementById('version').value}/index` : window.location.href.includes('kwirthmagnify.dev') || window.location.href.includes('localhost')? window.location.href = `/documentation/#/${document.getElementById('version').value}/index` : window.location.href = `/#/${document.getElementById('version').value}/index`">
    <option value="0.6.31">0.6.31</option>
    <option value="0.5.287" selected>0.5.287</option>
    <option value="0.5.40">0.5.40</option>
    <option value="0.5.21">0.5.21</option>
    <option value="0.4.127">0.4.127</option>
    <option value="0.4.63">0.4.63</option>
    <option value="0.4.20">0.4.20</option>
    <option value="0.3.160">0.3.160</option>
    <option value="0.2.8">0.2.8</option>
  </select>
</center>

* [Home](/0.5.287/index)
* [User & Admin Guide](/0.5.287/guide/index)
  * [Using kwirth](/0.5.287/guide/user/01-introduction)
    * [1. Introduction](/0.5.287/guide/user/01-introduction)
    * [2. Accessing kwirth](/0.5.287/guide/user/02-access)
    * [3. The kwirth UI](/0.5.287/guide/user/03-ui-tour)
    * [4. Selecting what to observe](/0.5.287/guide/user/04-selecting-resources)
    * [5. Working with channels](/0.5.287/guide/user/05-channels)
    * [6. Workspaces](/0.5.287/guide/user/06-workspaces)
    * [7. Everyday tasks](/0.5.287/guide/user/07-everyday-tasks)
  * [Administration](/0.5.287/guide/admin/01-deployment)
    * [1. Deployment](/0.5.287/guide/admin/01-deployment)
    * [2. Initial configuration](/0.5.287/guide/admin/02-initial-config)
    * [3. User management](/0.5.287/guide/admin/03-user-management)
    * [4. Security & permissions](/0.5.287/guide/admin/04-security-and-permissions)
    * [5. API management](/0.5.287/guide/admin/05-api-management)
    * [6. Cluster management](/0.5.287/guide/admin/06-cluster-management)
    * [7. Identity Provider integration](/0.5.287/guide/admin/07-idp-integration)
    * [8. Extending kwirth](/0.5.287/guide/admin/08-extending-kwirth)
  * [Extension manuals](/0.5.287/guide/extensions/index)
    * [Plugins (channels)](/0.5.287/guide/extensions/plugins/index)
      * [Log](/0.5.287/guide/extensions/plugins/log)
      * [Metrics](/0.5.287/guide/extensions/plugins/metrics)
      * [Alert](/0.5.287/guide/extensions/plugins/alert)
      * [Ops](/0.5.287/guide/extensions/plugins/ops)
      * [mIRC](/0.5.287/guide/extensions/plugins/mirc)
      * [Magnify](/0.5.287/guide/extensions/plugins/magnify)
      * [Trivy](/0.5.287/guide/extensions/plugins/trivy)
      * [Fileman](/0.5.287/guide/extensions/plugins/fileman)
      * [Topology](/0.5.287/guide/extensions/plugins/topology)
      * [Censor](/0.5.287/guide/extensions/plugins/censor)
      * [Pinocchio](/0.5.287/guide/extensions/plugins/pinocchio)
      * [News](/0.5.287/guide/extensions/plugins/news)
      * [Echo](/0.5.287/guide/extensions/plugins/echo)
      * [Provider Debug](/0.5.287/guide/extensions/plugins/provider-debug)
    * [Providers](/0.5.287/guide/extensions/providers/index)
      * [Tick](/0.5.287/guide/extensions/providers/tick)
      * [Validating](/0.5.287/guide/extensions/providers/validating)
      * [Kafka](/0.5.287/guide/extensions/providers/kafka)
      * [OpenTelemetry](/0.5.287/guide/extensions/providers/otel)
      * [Syslog](/0.5.287/guide/extensions/providers/syslog)
      * [HTTP Pull-Push](/0.5.287/guide/extensions/providers/http-pull-push)
      * [Trivy](/0.5.287/guide/extensions/providers/trivy)
      * [Sample](/0.5.287/guide/extensions/providers/sample)
    * [Senders](/0.5.287/guide/extensions/senders/index)
      * [console](/0.5.287/guide/extensions/senders/console)
      * [file](/0.5.287/guide/extensions/senders/file)
      * [email-smtp](/0.5.287/guide/extensions/senders/email-smtp)
      * [email-resend](/0.5.287/guide/extensions/senders/email-resend)
      * [teams](/0.5.287/guide/extensions/senders/teams)
      * [tee](/0.5.287/guide/extensions/senders/tee)
      * [regex](/0.5.287/guide/extensions/senders/regex)
      * [timed](/0.5.287/guide/extensions/senders/timed)
      * [ratelimit](/0.5.287/guide/extensions/senders/ratelimit)
      * [composite](/0.5.287/guide/extensions/senders/composite)
    * [Themes](/0.5.287/guide/extensions/themes/index)
      * [Avicii](/0.5.287/guide/extensions/themes/avicii)
      * [SFY](/0.5.287/guide/extensions/themes/sfy)
      * [Plexus](/0.5.287/guide/extensions/themes/plexus)
      * [Post-Punk](/0.5.287/guide/extensions/themes/post-punk)
      * [Matrix](/0.5.287/guide/extensions/themes/matrix)
      * [Depeche Mode](/0.5.287/guide/extensions/themes/depeche-mode)
    * [Identity providers](/0.5.287/guide/extensions/idps/index)
      * [Google](/0.5.287/guide/extensions/idps/google)
      * [GitLab Cloud](/0.5.287/guide/extensions/idps/gitlab-cloud)
      * [GitLab Self-Managed](/0.5.287/guide/extensions/idps/gitlab-onprem)
      * [GitHub Cloud](/0.5.287/guide/extensions/idps/github-cloud)
      * [GitHub Enterprise](/0.5.287/guide/extensions/idps/github-onprem)
    * [Homepages](/0.5.287/guide/extensions/homepages/index)
      * [Clusterized](/0.5.287/guide/extensions/homepages/clusterized)
      * [Avicii](/0.5.287/guide/extensions/homepages/avicii)
      * [Matrix](/0.5.287/guide/extensions/homepages/matrix)
      * [Depeche Mode](/0.5.287/guide/extensions/homepages/depeche-mode)
    * [Login extensions](/0.5.287/guide/extensions/logins/index)
      * [Anonymous](/0.5.287/guide/extensions/logins/anonymous)
      * [Magnify](/0.5.287/guide/extensions/logins/magnify)
    * [AI toolsets](/0.5.287/guide/extensions/aitoolsets/index)
      * [K8s Inventory](/0.5.287/guide/extensions/aitoolsets/k8s-inventory)
      * [K8s Describe](/0.5.287/guide/extensions/aitoolsets/k8s-describe)
      * [K8s Observability](/0.5.287/guide/extensions/aitoolsets/k8s-observability)
      * [K8s Metrics](/0.5.287/guide/extensions/aitoolsets/k8s-metrics)
      * [K8s Config & Secrets](/0.5.287/guide/extensions/aitoolsets/k8s-secrets)
      * [IRIA K8s Ops](/0.5.287/guide/extensions/aitoolsets/k8s-ops)
      * [IRIA Source Repos](/0.5.287/guide/extensions/aitoolsets/source-repos)
      * [Playground](/0.5.287/guide/extensions/aitoolsets/playground)
* [Installation](/0.5.287/installation)
* [How it works](/0.5.287/how)
* [Data streaming](/0.5.287/datastreaming)
* [Channel Architecture](/0.5.287/channelarch)
* [Plugins](/0.5.287/plugins/index)
  * [Managing plugins](/0.5.287/plugins/managing)
  * [Plugin reference](/0.5.287/plugins/reference/index)
    * [Log](/0.5.287/plugins/reference/log)
    * [Alert](/0.5.287/plugins/reference/alert)
    * [Censor](/0.5.287/plugins/reference/censor)
    * [Ops](/0.5.287/plugins/reference/ops)
    * [Fileman](/0.5.287/plugins/reference/fileman)
    * [Trivy](/0.5.287/plugins/reference/trivy)
    * [Pinocchio](/0.5.287/plugins/reference/pinocchio)
    * [Topology](/0.5.287/plugins/reference/topology)
    * [Echo](/0.5.287/plugins/reference/echo)
    * [News](/0.5.287/plugins/reference/news)
    * [Provider Debug](/0.5.287/plugins/reference/provider-debug)
  * [Autonomous plugins](/0.5.287/plugins/autonomous)
  * [Developing plugins](/0.5.287/plugins/developing)
* [Providers](/0.5.287/providers/index)
  * [Developing providers](/0.5.287/providers/developing)
  * [Provider reference](/0.5.287/providers/reference/index)
    * [Tick](/0.5.287/providers/reference/tick)
    * [Events](/0.5.287/providers/reference/events)
    * [Business](/0.5.287/providers/reference/business)
    * [Validating](/0.5.287/providers/reference/validating)
    * [Metrics](/0.5.287/providers/reference/metrics)
    * [Kafka](/0.5.287/providers/reference/kafka)
    * [OpenTelemetry](/0.5.287/providers/reference/otel)
    * [HTTP Pull-Push](/0.5.287/providers/reference/http-pull-push)
    * [Sample](/0.5.287/providers/reference/sample)
* [Senders](/0.5.287/senders/index)
  * [Managing senders](/0.5.287/senders/managing)
  * [Developing senders](/0.5.287/senders/developing)
  * [Sender reference](/0.5.287/senders/reference/index)
    * [console](/0.5.287/senders/reference/console)
    * [file](/0.5.287/senders/reference/file)
    * [email-resend](/0.5.287/senders/reference/email-resend)
    * [email-smtp](/0.5.287/senders/reference/email-smtp)
    * [teams](/0.5.287/senders/reference/teams)
    * [tee](/0.5.287/senders/reference/tee)
    * [regex](/0.5.287/senders/reference/regex)
    * [composite](/0.5.287/senders/reference/composite)
    * [timed](/0.5.287/senders/reference/timed)
* [Channels](/0.5.287/channels/index)
  * [Log](/0.5.287/channels/log)
  * [Metrics](/0.5.287/channels/metrics)
  * [Alert](/0.5.287/channels/alert)
  * [Trivy](/0.5.287/channels/trivy)
  * [Ops](/0.5.287/channels/ops)
  * [Echo](/0.5.287/channels/echo)
  * [Fileman](/0.5.287/channels/fileman)
  * [Magnify](/0.5.287/channels/magnify)
  * [Pinocchio](/0.5.287/channels/pinocchio)
  * [Topology](/0.5.287/channels/topology)
  * [Censor](/0.5.287/channels/censor)
  * [News](/0.5.287/channels/news)
* [Security](/0.5.287/security)
* [Persistence](/0.5.287/persistence)
* [Common tasks](/0.5.287/commontasks)
* [User management](/0.5.287/usermanagement)
* [IdP integration](/0.5.287/idp/index)
  * [Google / Gmail](/0.5.287/idp/google)
  * [GitLab](/0.5.287/idp/gitlab)
  * [GitHub](/0.5.287/idp/github)
  * [Security notes](/0.5.287/idp/security)
* [Cluster management](/0.5.287/clustermanagement)
* [API Management](/0.5.287/apimanagement/index)
  * [API Keys](/0.5.287/apimanagement/api-keys)
  * [Access Keys](/0.5.287/apimanagement/access-keys)
  * [Multi-cluster](/0.5.287/apimanagement/multi-cluster)
  * [Key types](/0.5.287/apimanagement/key-types)
* [Use cases](/0.5.287/usecases)
* [Developing](/0.5.287/developing/index)
  * [Back channel](/0.5.287/developing/back)
  * [Front channel](/0.5.287/developing/front)
  * [Build kwirth](/0.5.287/build)
    * [Linux Build Setup](/0.5.287/linux-build-setup)
* [Change log](/0.5.287/changelog)
* [Roadmap](/0.5.287/roadmap)
* [About](/0.5.287/about)
